# VFS-global-bot

./: .gitignore  Dockerfile  VFSBot.py  docker-compose.yml  example.env  pyproject.toml  settings.py  utils.py
service/: VFSBot.py  settings.py  utils.py
